Added buttons and lives counter

--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
     </logo>
 
     <container>
-        <div class="row justify-content-center">
+        <div class="row justify-content-center mt-5">
 
             <div class="col-md-3">
                 <h1>HELLOoOOOOO!</h1>
             </div>
 
             <div class="col-md-3">
+                <h1>Press The Letters To Start!</h1>
                 <div id="buttons"></div>
+                <div id="gameLives"></div>
             </div>
         </div>
     </container>
