changed background size and repeat

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <logo>
         <div class="row justify-content-center">
-            <img id="logoImg" src="https://ya-webdesign.com/images/neon-genesis-evangelion-png-2.png"
+            <img class="logoImg " src="https://ya-webdesign.com/images/neon-genesis-evangelion-png-2.png"
                 alt="Neon Genesis Logo">
         </div>
     </logo>
