--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="col-md-3">
                 <h1>Press The Letters To Start!</h1>
                 <div id="buttons"></div>
+                <div id="guessedLetters"></div>
                 <div id="gameLives"></div>
             </div>
         </div>
