Cleaned up code, changed correct choice function

--- a/index.html
+++ b/index.html
@@ -24,19 +24,22 @@
         <div class="row justify-content-center mt-5">
 
             <div class="col-md-3">
-                <h1>HELLOoOOOOO!</h1>
+                <h1>Place Holder Text</h1>
                 <div class="imagesHolder"></div>
             </div>
 
-            <div class="col-md-3">
+            <div class="col-md-3 right-col">
                 <h1>Press The Letters To Start!</h1>
-                <div class="row">
-                    <div id="buttons"></div>
-                </div>
-                <div class="row">
+
+                <div class="row justify-content-center">
                     <div id="guessedLetters"></div>
                 </div>
-                <div class="row">
+
+                <div class="row justify-content-center">
+                    <div id="buttons"></div>
+                </div>
+
+                <div class="row justify-content-center">
                     <div id="gameLives"></div>
                 </div>
 
