--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
                 </div>
 
                 <div class="row justify-content-center">
-                    <div id="gameLives"></div>
+                    <div class="col-md-8">
+                        <div id="gameLives"></div>
+                    </div>
+                    <div class="col-md-4">
+                        <button id="playAgain" class="invisible btn btn-outline-light">Play Again?</button>
+                    </div>
                 </div>
 
             </div>
