--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <container class="container my-5">
         <div class="row justify-content-center mt-5">
 
-            <div class="col-md-3">
-                <h1>Place Holder Text</h1>
-                <div class="imagesHolder"></div>
+            <div class="col-md-4">
+                <h1>Do Not Let EVA-01 Go Beserk</h1>
+                <img src="" alt="Eva Hang Man" id="hangman">
             </div>
 
             <div class="col-md-3 right-col">
